--- a/res/layout/high_scores.xml
+++ b/res/layout/high_scores.xml
@@ -15,9 +15,11 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
     <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/higScoresList"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/highScoresList"
             android:layout_gravity="center"
-            android:layout_margin="@android:dimen/app_icon_size"/>
+            android:layout_margin="@android:dimen/app_icon_size"
+            android:background="@drawable/wall"
+            android:padding="@dimen/activity_horizontal_margin"/>
 </FrameLayout>
