--- a/res/layout/high_scores.xml
+++ b/res/layout/high_scores.xml
@@ -22,4 +22,27 @@
             android:layout_margin="@android:dimen/app_icon_size"
             android:background="@drawable/wall"
             android:padding="@dimen/activity_horizontal_margin"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/main_menu"
+            android:id="@+id/hsMainMenu"
+            android:layout_gravity="left|bottom"
+            android:background="@drawable/wall"
+            android:onClick="toMainMenu"
+            android:padding="6dp"
+            android:layout_margin="@dimen/activity_horizontal_margin"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/level_select"
+            android:id="@+id/hsLevelSelect"
+            android:layout_gravity="right|bottom"
+            android:background="@drawable/wall"
+            android:onClick="toLevelSelect"
+            android:padding="6dp"
+            android:layout_margin="@dimen/activity_horizontal_margin"/>
+
 </FrameLayout>
