--- a/res/xml/pref_data_sync.xml
+++ b/res/xml/pref_data_sync.xml
@@ -1,25 +1,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <!--
-         NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it.
-    -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-    <ListPreference
-        android:defaultValue="180"
-        android:entries="@array/pref_sync_frequency_titles"
-        android:entryValues="@array/pref_sync_frequency_values"
-        android:key="sync_frequency"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
-        android:title="@string/pref_title_sync_frequency" />
-
-    <!--
-         This preference simply launches an intent when selected. Use this UI sparingly, per
-         design guidelines.
-    -->
-    <Preference android:title="@string/pref_title_system_sync_settings" >
-        <intent android:action="android.settings.SYNC_SETTINGS" />
-    </Preference>
+<SwitchPreference
+    android:defaultValue="true"
+    android:switchTextOn="@string/pref_switch_on"
+    android:switchTextOff="@string/pref_switch_off"
+    android:key="pref_sync_switch"
+    android:summaryOn="@string/pref_summary_sync_data"
+    android:summaryOff="@string/pref_summary_sync_data" />
 
 </PreferenceScreen>
