--- a/res/layout/high_score_list_item.xml
+++ b/res/layout/high_score_list_item.xml
@@ -5,7 +5,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@drawable/path"
+        android:background="@drawable/industrial_path"
         android:padding="3dp">
 
     <TextView
