--- a/res/layout/high_scores.xml
+++ b/res/layout/high_scores.xml
@@ -4,7 +4,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@drawable/path">
+        android:background="@drawable/industrial_path">
 
     <TextView
             android:layout_width="wrap_content"
@@ -20,7 +20,7 @@
             android:id="@+id/highScoresList"
             android:layout_gravity="center"
             android:layout_margin="@android:dimen/app_icon_size"
-            android:background="@drawable/wall"
+            android:background="@drawable/industrial_wall"
             android:padding="@dimen/activity_horizontal_margin"/>
 
     <Button
@@ -29,7 +29,7 @@
             android:text="@string/main_menu"
             android:id="@+id/hsMainMenu"
             android:layout_gravity="left|bottom"
-            android:background="@drawable/wall"
+            android:background="@drawable/industrial_wall"
             android:onClick="toMainMenu"
             android:padding="6dp"
             android:layout_margin="@dimen/activity_horizontal_margin"/>
@@ -40,7 +40,7 @@
             android:text="@string/level_select"
             android:id="@+id/hsLevelSelect"
             android:layout_gravity="right|bottom"
-            android:background="@drawable/wall"
+            android:background="@drawable/industrial_wall"
             android:onClick="toLevelSelect"
             android:padding="6dp"
             android:layout_margin="@dimen/activity_horizontal_margin"/>
