--- a/res/layout/level_select.xml
+++ b/res/layout/level_select.xml
@@ -4,7 +4,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@drawable/path">
+        android:background="@drawable/industrial_path">
 
     <TextView
             android:layout_width="wrap_content"
