--- a/res/layout/level_select_list_item.xml
+++ b/res/layout/level_select_list_item.xml
@@ -9,7 +9,7 @@
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/preview"
+            android:id="@+id/level_select_preview"
             android:padding="@dimen/activity_horizontal_margin"/>
 
     <TextView
