Working on DB storing of scores

--- a/res/values/strings_activity_options.xml
+++ b/res/values/strings_activity_options.xml
@@ -11,7 +11,7 @@
 
     <string-array name="pref_visual_theme_list">
         <item>Industrial</item>
-        <item>Other</item>
+        <item>Retro</item>
     </string-array>
     <string-array name="pref_visual_theme_list_values">
         <item>0</item>
