--- a/res/values/strings_activity_options.xml
+++ b/res/values/strings_activity_options.xml
@@ -5,7 +5,7 @@
     <!-- Strings related to Settings -->
 
 
-    <!-- Example General settings -->
+    <!-- Theme settings -->
     <string name="pref_header_theme">Theme</string>
     <string name="pref_title_choose_visual_theme">Choose Theme</string>
 
@@ -18,10 +18,10 @@
         <item>1</item>
     </string-array>
 
-    <!-- Example settings for Data & Sync -->
+    <!--settings for Data & Sync -->
     <string name="pref_header_sync_data">Data &amp; sync</string>
     <string name="pref_switch_on">On</string>
     <string name="pref_switch_off">Off</string>
-    <string name="pref_summary_sync_data">Synchronize high scores with online high scores</string>
+    <string name="pref_summary_sync_data">Synchronize high scores across all your devices</string>
 
 </resources>
