--- a/res/xml/pref_data_sync.xml
+++ b/res/xml/pref_data_sync.xml
@@ -1,7 +1,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
 <SwitchPreference
-    android:defaultValue="true"
+    android:defaultValue="false"
     android:switchTextOn="@string/pref_switch_on"
     android:switchTextOff="@string/pref_switch_off"
     android:key="pref_sync_switch"
